--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=chat
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/AramChat?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=GEU1224kk!
+
+#spring.data.mongodb.uri=mongodb://localhost:27017/AramChat
+#spring.data.mongodb.username=Arambyeol
+#spring.data.mongodb.password=Arambyeol
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.port=443
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=/home/ec2-user/aram/ArambyeolChatKeyStore.p12
+server.ssl.key-store-password=aksl12240407!
+server.ssl.key-alias=chatAlias
+
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+spring.output.ansi.enabled=ALWAYS
