--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test'
 	//MongoDB
-//	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-//	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
 
 
 }
