--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,14 @@ dependencies {
 	//security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test'
+	//jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	//MongoDB
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	//redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 
 }
