--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,9 @@ dependencies {
 	//redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	//spring security messaging
+	implementation 'org.springframework.security:spring-security-messaging'
+
 
 }
 
